<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">TempMeasure</string>
    <string name="app_settings">Settings</string>
    <!-- options_menu item names -->
    <string name="menu_share">Share</string>
    <string name="menu_setting">Settings</string>
    <!-- preference keys -->
    <string name="pref_tap">preftap</string>
    <string name="pref_time">preftime</string>
    <string name="pref_mac">Mac addres</string>
    <!-- div text strings -->
    <string name="text_refresh">Tap screen to update</string>
    <string name="text_temp">+88.888</string>
    <string name="text_max">+00.00</string>
    <string name="text_min">+99.99</string>
    <string name="text_lastreset">date</string>
    <!-- mac addres -->
</resources>
