<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="first_preferences" >
    <SwitchPreference android:title="Tap to refresh"
                          android:key="@string/pref_tap"
                          android:summary="Enable to save battery"
                          android:defaultValue="true"
                          android:persistent="true"
                          android:disableDependentsState="true" />
	
    <ListPreference   android:title="Refresh Interval"
                          android:key="@string/pref_time"
                          android:summary="Set the desired refresh interval"
                          android:persistent="true"
                          android:dependency="@string/pref_tap"
                          android:entries="@array/time_array"
                          android:entryValues="@array/time_entry" />
     <PreferenceCategory android:title="Arduino settings" >   
            <Preference android:title="Mac address"
                        android:key="@string/pref_mac"
                        android:summary=""
                        android:persistent="true"
                        android:enabled="false" />
      </PreferenceCategory>
</PreferenceScreen>
