 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@drawable/background"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

    <ImageView 
        android:id="@+id/top"
        android:src="@drawable/background_01"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:layout_marginBottom="-7dp"/>
               
    <TextView
        android:id="@+id/temperatureShow"
        android:maxLength="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_temp"
        android:textColor="#000"
        android:textSize="94sp"
        android:layout_below="@id/top"
        android:layout_marginLeft="13sp"/>
        
    <TextView
        android:id="@+id/taprefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/temperatureShow"
        android:alpha="0.4"
        android:text="@string/text_refresh" />
        
    <TextView 
        android:id="@+id/temperatureMax"
        android:maxLength="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_max"
        android:textColor="#000"
        android:textSize="70sp"
        android:layout_below="@id/taprefresh"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="46dp"/>
        
    <TextView 
        android:id="@+id/temperatureMin"
        android:maxLength="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_min"
        android:textColor="#000"
        android:textSize="70sp"
        android:layout_below="@id/temperatureMax"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="22dp"/>
        
     <Button
         android:id="@+id/resetButton"
         android:focusable="false"
         android:adjustViewBounds="true"
         android:layout_width="140dp"
         android:layout_height="37dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/temperatureMin"
         android:layout_marginTop="30dp"
         android:background="@drawable/reset_button"
         android:onClick="onReset"/>

</RelativeLayout>
